# nav_study

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/c_test/include/c_test/c_test/action/: atest.hpp
install/c_test/include/c_test/c_test/action/detail/: atest__functions.c  atest__rosidl_typesupport_fastrtps_c.h  atest__rosidl_typesupport_fastrtps_cpp.hpp  atest__rosidl_typesupport_introspection_c.h  atest__struct.hpp  atest__type_support.cpp  atest__type_support.hpp
install/c_test/include/c_test/c_test/msg/: novel.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/c_test/include/c_test/c_test/msg/detail/: novel__builder.hpp  novel__functions.h  novel__rosidl_typesupport_fastrtps_c.h  novel__rosidl_typesupport_introspection_c.h  novel__struct.h  novel__type_support.c
install/c_test/lib/c_test/: hello2_node  hello_node  t_action_c  t_action_s  t_pub  t_pub_msg
install/c_test/local/lib/python3.10/dist-packages/c_test/: _c_test_s.ep.rosidl_typesupport_fastrtps_c.c
install/c_test/local/lib/python3.10/dist-packages/c_test-0.0.0-py3.10.egg-info/: PKG-INFO
install/c_test/local/lib/python3.10/dist-packages/c_test/action/: _atest_s.c
install/c_test/local/lib/python3.10/dist-packages/c_test/msg/: _novel_s.c
install/c_test/share/ament_index/resource_index/package_run_dependencies/: c_test
install/c_test/share/ament_index/resource_index/rosidl_interfaces/: c_test
install/c_test/share/c_test/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/c_test/share/c_test/action/: Atest.idl
install/c_test/share/c_test/cmake/: c_test__rosidl_typesupport_cExport-noconfig.cmake  c_test__rosidl_typesupport_cppExport-noconfig.cmake  c_test__rosidl_typesupport_cppExport.cmake  c_test__rosidl_typesupport_introspection_cExport-noconfig.cmake  c_test__rosidl_typesupport_introspection_cExport.cmake  c_test__rosidl_typesupport_introspection_cppExport.cmake  export_c_test__rosidl_generator_cppExport.cmake  export_c_test__rosidl_typesupport_fastrtps_cExport.cmake  export_c_test__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/c_test/share/c_test/msg/: Novel.idl  Novel.msg
install/c_test/share/c_test/rust/: Cargo.toml
install/c_test/share/c_test/rust/src/: action.rs
install/c_test/share/c_test/rust/src/action/: rmw.rs
install/model/share/model/: package.ps1  package.sh
install/model/share/model/launch/: show.launch.py  show_u.launch.py
install/model/share/model/urdf/: omni_g.urdf
install/my_nav/include/my_nav/: diff_drive_controller.hpp
install/my_nav/lib/my_nav/: t_main
install/my_nav/share/ament_index/resource_index/package_run_dependencies/: my_nav
install/my_nav/share/my_nav/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_nav/share/my_nav/cmake/: my_navConfig.cmake
install/py_test/lib/py_test/: path  t_pub  t_pub_msg  test
install/py_test/share/py_test/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot/lib/robot/: pub_cmd  pub_cmd_sdl
install/robot/share/ament_index/resource_index/package_run_dependencies/: robot
install/robot/share/ament_index/resource_index/parent_prefix_path/: robot
install/robot/share/robot/: package.ps1  package.sh  package.xml
install/robot/share/robot/config/: amcl.yaml  nav2_params.yaml
install/robot/share/robot/launch/: amcl.launch.py  map_pub.launch.py  map_s.launch.py
install/robot/share/robot/map/: map.yaml
log/: latest_build
src/c_test/: CMakeLists.txt
src/c_test/action/: Atest.action
src/c_test/src/: hello  hello_class.cpp  t_action_c.cpp  t_action_s.cpp  t_pub.cpp  t_pub_msg.cpp
src/lqr_nav/: CMakeLists.txt  package.xml
src/lqr_nav/include/lqr_nav/: common_types.hpp  lqr_controller_node.hpp  lqr_solver.hpp  performance_analyzer.hpp  trajectory_manager.hpp
src/lqr_nav/src/: LQR.txt  lqr_controller_node.cpp  lqr_solver.cpp  lqr_tracking_node.cpp  performance_analyzer.cpp  trajectory_manager.cpp
src/model/: CMakeLists.txt  package.xml
src/model/rviz/: show.rviz
src/model/urdf/: omni_u.urdf
src/model/world/Untitled/: model.sdf  robot.world
src/model/yaml/: mecanum_drive_controller.yaml
src/my_costmap/: CMakeLists.txt  package.xml
src/my_costmap/include/my_costmap/: inflator.hpp
src/my_costmap/src/: inflator.cpp  inflator_node.cpp
src/my_nav/: CMakeLists.txt
src/my_nav/src/: diff_drive_controller.cpp  t_main.cpp
src/planner/: CMakeLists.txt  package.xml
src/planner/include/planner/: astar_ros.hpp  astar_search.hpp
src/planner/src/: astar_ros.cpp  astar_search.cpp  planner_node.cpp
src/py_test/: package.xml  setup.py
src/py_test/launch/: map_pub.launch.py
src/py_test/py_test/: t_pub.py  test.py
src/robot/: CMakeLists.txt
src/robot/launch/: nav.launch.py  plan.launch.py
src/robot/map/: map.pgm
src/robot/rviz/: prue.rviz
src/robot/src/: pub_cmd.cpp  pub_cmd_sdl.cpp
